[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "bowtie"
author = "Jacques Kvam"
author-email = "jwkvam+pypi@gmail.com"
home-page = "https://github.com/jwkvam/bowtie"
description-file = "README.rst"
classifiers = [
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.6",
"Programming Language :: Python :: 3.7"
]
requires-python = ">=3.6"
requires = [
"click",
"eventlet",
"flask",
"flask-socketio",
"jinja2",
"markdown",
"msgpack"
]
keywords = "dashboard visualization interactive visualize"
